<resources>
    <string name="app_name">TasteThat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Facebook -->
    <string name="facebook_app_id">379440962516055</string>
    <string name="fb_login_protocol_scheme">fb379440962516055</string>

    <!-- Bottom navigation -->
    <string name="bottomnav_add">Add</string>
    <string name="bottomnav_home">Home</string>
    <string name="bottomnav_profile">Profile</string>
    <string name="bottomnav_menu">Options</string>

    <!-- User -->
    <string name="author_field">Uploaded by: @%s</string>
    <string name="author_field_viewholder">\@%s</string>

    <!-- Page headers -->
    <string name="all_combinations_header">All Combinations</string>
    <string name="uploads_header">Uploaded Combinations</string>
    <string name="rated_header">Rated Combinations</string>
    <string name="login_header">Taste that</string>
    <string name="add_combination_frag_header">Add your combination</string>
    <string name="options_header">Options</string>

    <!-- Toasts -->
    <string name="toast_successfull_adding">Combination added!</string>
    <string name="toast_invalid_input">Please provide a valid input</string>
    <string name="toast_not_available">"Not available yet!"</string>
    <string name="toast_caching_enabled">Data caching is enabled!</string>
    <string name="toast_caching_disabled">Data caching is disabled!</string>
    <string name="toast_provide_email">Please enter a valid email!</string>
    <string name="toast_provide_password">Please enter a valid password!</string>
    <string name="toast_unable_to_register_user">Unable to register user!</string>
    <string name="toast_not_long_enough_password">Passwords should be at least 6 symbols long!</string>
    <string name="toast_picture_uploaded">Profile successfully updated!</string>

    <string name="searchBar_hint">What goes with…</string>

    <!-- Switches -->
    <string name="switch_data_caching_header">Data caching </string>
    <string name="switch_notifications_header">Notifications </string>

    <string name="btn_submit">Submit</string>
    <string name="btn_rate">Rate</string>
    <string name="order_by_rating">Order by rating</string>
    <string name="order_by_timestamp">Order by timestamp</string>
    <string name="uploaded_button_title">Uploaded</string>
    <string name="achievements_button_title">Achievements</string>
    <string name="rated_button_title">Rated</string>
    <string name="logout_button_title">Logout</string>

    <string name="discard_dialog_title">Warning!</string>
    <string name="discard_dialog_message">Are you sure you want to discard all changes?</string>
    <string name="discard_dialog_accept_button">Yes</string>
    <string name="discard_dialog_deny_button">No</string>

    <string name="image_discard_dialog_title">Warning!</string>
    <string name="image_discard_dialog_message">All selected images will be discarded! Proceed?</string>
    <string name="image_discard_dialog_accept_button">Yes</string>
    <string name="image_discard_dialog_deny_button">No</string>
    <string name="btn_add_combination">Add Combination</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_combination_title">Rate combination</string>
    <string name="my_achievements_title">My achievements:</string>
    <string name="edit_your_profile_header">Edit your profile</string>
    <string name="btn_upload_picture">Upload</string>

    <string name="save_changes_dialog_title">Changes</string>
    <string name="save_changes_dialog_message">Are you sure you want to save those changes?</string>
    <string name="save_changes_dialog_accept_button">Yes</string>
    <string name="save_changes_dialog_deny_button">No</string>

    <string name="btn_uploads">Uploads</string>

    <string name="sign_out_dialog_title">Warning!</string>
    <string name="sign_out_dialog_message">Are you sure that you want to sign out?</string>
    <string name="sign_out_dialog_accept_button">Yes</string>
    <string name="sign_out_dialog_deny_button">No</string>

    <string name="app_name_tastethat">App name: TasteThat</string>
    <string name="app_version">Version: %s</string>
    <string name="rated">Rated</string>
    <string name="email_contact">For any questions or problems please contact me at: stoyaniviv@gmail.com</string>
    <string name="developer_name">Developed by: Stoyan Ivanov</string>
    <string name="about_fragment_header">About app</string>

    <string name="hint_password">Password (min 6 symbols)</string>
    <string name="hint_email">Email</string>

    <string name="btn_register">Register</string>
    <string name="registration_login_alternative">Already have an account? Sign in!</string>

    <string name="order_option_rating">Ordering by rating...</string>
    <string name="order_option_timestamp">Ordering by timestamp...</string>

    <string name="image_selection_dialog_title">"Select Picture"</string>
    <string name="error_while_uploading_profile_picture">"Something went wrong while uploading"</string>
    <string name="no_account_yet_create_one">No account yet? Create one!</string>

    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="dialog_edit_combination_title">Edit description</string>

    <string name="successful_rating_submit">Rating submitted!</string>
    <string name="report_submitted">Report submitted!</string>
</resources>
